# kantheon

./: .gitignore  AGENTS.md  CLAUDE.md  EXAMPLES.md  README.md  build.gradle.kts  justfile  midas next steps.txt  pnpm-lock.yaml  pnpm-workspace.yaml  review-001.md  review-002.md  review-003.md  review-004.md  review-005.md  review-006.md  reviews.md  settings.gradle.kts  tasks-review-001.md  tasks-review-004.md  tasks-review-005.md  tasks-review-006.md  v1 next steps 260627.md
.restructure-test/: moved.md
docs/: README.md  STATUS.md
gradle/: libs.versions.toml
scripts/: check-pat.sh  copy-aks.sh  fork-docs-check.sh  (+1 more)
services/metis/: Dockerfile  README.md  pyproject.toml
services/metis/bench/: bench_fit.py
services/metis/k8s/: Chart.yaml  README.md  values.yaml
services/metis/k8s/base/: deployment.yaml
services/metis/k8s/overlays/local/: kustomization.yaml
services/metis/k8s/templates/: _env.tpl
services/metis/src/metis/: arrow_io.py  config.py  grpc_service.py  main.py  metis_pb2_grpc.py  metrics.py  telemetry.py  workspace.py
services/metis/src/metis/models/: __init__.py  arima.py  diagnostics.py  fit_runner.py  linear.py  prophet_model.py  scenario.py
services/metis/tests/: conftest.py  test_arrow_io.py  test_fingerprint_cross_engine.py  test_fit_grpc.py  test_metrics.py  test_validation.py  test_workspace.py
services/metis/tests/fixtures/integrity/: README.md  python-canonical-fingerprint.hex  python-canonical-schema.txt
services/metis/tests/golden/: fixtures.py  test_golden_arima.py  test_golden_linear.py  test_golden_prophet.py
(+2367 files in other folders)
