[project]
name = "metis-service"
version = "0.1.0"
description = "Metis — model estimation service (SARIMAX, Prophet, linear)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.71.0",
    "grpcio-tools>=1.71.0",
    "pyarrow>=20.0.0",
    "polars>=1.30.0",
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.6.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.3",
    "shared-proto",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.40b0",
    "otel-config",
    "prophet>=1.1.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.4",
    "mypy>=1.14.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Component tier (testing arc Phase 1 Stage 1.1) — mirrors the Kotlin
# `componentTest` source set. Real-dep specs (testcontainers-python) carry
# `@pytest.mark.component`; select with `just test-py services/metis -m component`.
markers = [
    "component: real-dependency component tier (testcontainers-python; no cluster)",
]

[tool.ruff]
target-version = "py313"

[tool.uv.sources]
shared-proto = { path = "../../shared/proto/build/python-package", editable = true }
otel-config = { path = "../../shared/libs/python/otel-config", editable = true }
